--- a/SmileBoy.Client.BL/SmileBoy.Client.BL.csproj
+++ b/SmileBoy.Client.BL/SmileBoy.Client.BL.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
