--- a/SmileBoy.Client.BL/SmileBoy.Client.Core.csproj
+++ b/SmileBoy.Client.BL/SmileBoy.Client.Core.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="IdentityModel" Version="5.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.1" />
@@ -18,6 +19,10 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmileBoy.Client.Entity\SmileBoy.Client.Entities.csproj" />
   </ItemGroup>
 
 </Project>
