--- a/SmileBoyClient/SmileBoy.Client.View.csproj
+++ b/SmileBoyClient/SmileBoy.Client.View.csproj
@@ -86,4 +86,10 @@
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Import Project="..\packages\MongoDB.Libmongocrypt.1.0.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.0.0\build\MongoDB.Libmongocrypt.targets')" />
   <Import Project="..\packages\MongoDB.Driver.Core.2.11.6\build\MongoDB.Driver.Core.targets" Condition="Exists('..\packages\MongoDB.Driver.Core.2.11.6\build\MongoDB.Driver.Core.targets')" />
+  <ItemGroup>
+    <Content Remove="C:\Users\dimon\Desktop\SmileBoyClient\packages\MongoDB.Driver.Core.2.11.6\build\../runtimes/win/native/libzstd.dll" />
+    <Content Remove="C:\Users\dimon\Desktop\SmileBoyClient\packages\MongoDB.Driver.Core.2.11.6\build\../runtimes/win/native/snappy32.dll" />
+    <Content Remove="C:\Users\dimon\Desktop\SmileBoyClient\packages\MongoDB.Driver.Core.2.11.6\build\../runtimes/win/native/snappy64.dll" />
+    <Content Remove="C:\Users\dimon\Desktop\SmileBoyClient\packages\MongoDB.Libmongocrypt.1.0.0\build\../x64/native/windows/mongocrypt.dll" />
+  </ItemGroup>
 </Project>
