decompos styles & add ImageConverter ToDo: finished products

--- a/SmileBoyClient/App.config
+++ b/SmileBoyClient/App.config
@@ -49,6 +49,10 @@
   <add key="ClientId" value="ConsoleClient" />
   <add key="ClientSecret" value="ConsoleClientSecret" />
   <add key="Scope" value="WebAPI offline_access profile openid" />
-  </appSettings> 
+  </appSettings>
 
+  <!--<connectionStrings>
+    <add name="smileboydb" providerName="MongoDb" connectionString="mongodb://localhost:27017" />
+  </connectionStrings>-->
+  
 </configuration>
