Add ProductViewModel & realize crud operation

--- a/SmileBoyClient/App.config
+++ b/SmileBoyClient/App.config
@@ -51,8 +51,8 @@
   <add key="Scope" value="WebAPI offline_access profile openid" />
   </appSettings>
 
-  <!--<connectionStrings>
+  <connectionStrings>
     <add name="smileboydb" providerName="MongoDb" connectionString="mongodb://localhost:27017" />
-  </connectionStrings>-->
+  </connectionStrings>
   
 </configuration>
