--- a/SmileBoy.Client.Tests/SmileBoy.Client.Tests.csproj
+++ b/SmileBoy.Client.Tests/SmileBoy.Client.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmileBoy.Client.BL\SmileBoy.Client.Core.csproj" />
+    <ProjectReference Include="..\SmileBoyClient\SmileBoy.Client.View.csproj" />
   </ItemGroup>
 
 </Project>
